# Douban_Crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: auto-update-dashboard.yml
scrapy_douban/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
scrapy_douban/spiders/: __init__.py  top250.py
scripts/: _bootstrap.py  analyze_data.py  build_experiment_report.py  clean_data.py  run_requests_pipeline.py
sql/: schema.sql
src/douban_crawler/: __init__.py  cli.py  config.py  models.py
src/douban_crawler/analysis/: __init__.py  data_cleaning.py  visualization.py
src/douban_crawler/crawlers/: __init__.py  detail_requests.py  top250_requests.py
src/douban_crawler/selenium/: __init__.py  cookie_bootstrap.py
src/douban_crawler/utils/: exporters.py  http.py  list_metadata.py  logging_utils.py  posters.py  robots.py  storage.py  text.py
tests/: test_core_pipeline.py
